--- a/style/products.css
+++ b/style/products.css
@@ -3,7 +3,6 @@
 *{
     margin: 0;
     padding: 0;
-    background-color: #000 !important;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -17,6 +16,10 @@ ul{
 
 a{
     text-decoration: none;
+}
+
+.disable-scroll{
+  overflow: hidden;
 }
 
 main .nav-home{
@@ -102,6 +105,7 @@ main .nav-home .logout{
     justify-content: center;
     flex-wrap: wrap;
     gap: 1rem;
+    position: relative;
   }
   
   .product {
@@ -117,7 +121,8 @@ main .nav-home .logout{
   .product-info{
     display: flex;
     flex-direction: column;
-
+    width: 200px;
+    height: 200px;
   }
   .product img {    
     display: flex;
@@ -128,14 +133,16 @@ main .nav-home .logout{
   .product h3 {
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
+    color: #fff;
   }
   
   .product p {
     margin-bottom: 0.5rem;
+    color: #fff;
   }
   
   .product button {
-    background-color: #007bff;
+    background-color: #31a5e7;
     color: #fff;
     border: none;
     padding: 0.5rem 1rem;
@@ -170,5 +177,171 @@ main .nav-home .logout{
   }
 
   .products-section .ul-filters .li-filter.filter-active{
-    background-color: #1281c2;
+    background-color: #135f8b;
   }
+
+  .shop-car{
+    background-color: #31a5e7;
+    border-radius: 100%;
+    display: flex;
+    height: 50px;
+    width: 50px;
+    justify-content: center;
+    align-items: center; 
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    cursor: pointer;
+    z-index: 10;
+  }
+
+  .modal-overlay{
+    height: 100vh;
+    width: 100vw;
+    background-color: #000;
+    position: fixed;
+    left: 0;
+    top: 0;
+    filter: opacity(.425);
+    z-index: -1;
+  }
+
+  .show-overlay{
+    z-index: 1;
+  }
+
+  .shop-car i{
+    font-size: 2rem;
+    color: #fff;
+  }
+
+  .shop-car span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    right: 5px;
+    bottom: 45px;
+    border-radius: 100%;
+    background-color: #fff;
+    color: #0062cc;
+    width: 25px;
+    height: 25px;
+    font-weight: bolder;
+  }
+
+  .shopping-modal{
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    background-color: #31a5e7;
+    top: 50%;
+    left: 50%;
+    width: 600px;
+    height: 500px;
+    transform: translate(-50%, -50%);
+    border-radius: 1rem;
+    z-index: -1;
+  }
+
+  .show-shoppingModal{
+    z-index: 10;
+  }
+
+  .shopping-modal header{
+    display: flex;
+    justify-content: end;
+    padding-right: 15px;
+    position: relative;
+  }
+
+  .shopping-modal header i{
+    font-size: 1.6rem;
+    color: #fff;
+    cursor: pointer;
+  }
+
+  .shopping-modal i:hover{
+    color: #ebe8e8;
+  }
+
+  .shopping-modal .shopping-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    overflow-y: scroll;
+  }
+
+  .shopping-modal .shopping-list .product{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 50px;
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+  
+  .shopping-modal .shopping-list .product img {    
+    display: flex;
+    width: 150px;
+    object-fit: cover;
+  }
+  
+  .shopping-modal .shopping-list .product h3 {
+    width: 200px;
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+    color: #fff;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: lighter;
+  }
+  
+  .shopping-modal .shopping-list .product p {
+    margin-bottom: 0.5rem;
+    color: #fff;
+  }
+
+  .shopping-modal .shopping-total{
+    display: flex;
+    height: 80px;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    gap: 1rem;
+    padding: 0 20px;
+  }
+  .shopping-modal .shopping-total .total{
+    display: flex;
+    width: 200px;
+    gap: 1rem;
+
+  }
+
+  .shopping-modal .shopping-total span:nth-child(1){
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+
+  .shopping-modal .shopping-total span:nth-child(2){
+    color: #fff;
+    font-size: 1.2rem;
+  }
+
+  .shopping-modal .send-order{
+    padding: 10px 15px;
+    border-radius: 1rem;
+    background-color: #0062cc;
+    color: #fff;
+    cursor: pointer;
+  }
+
+  .shopping-modal .send-order:hover{
+    background-color: #034489;
+  }
+  
